# backend/internal/router/routes_orders.go
@@ -22,6 +22,8 @@ func registerOrderRoutes(authAll fiber.Router, handlers *app_handlers.Handler) {
 	authAll.Put("/orders/:id", requireWrite, handlers.Orders.UpdateOrder)
 
 	authAll.Patch("/orders/:id/assign", requirePlanner, handlers.Orders.AssignOrder)
+	authAll.Patch("/orders/:id/start", requirePlanner, handlers.Orders.StartOrder)
 	authAll.Patch("/orders/:id/close", requirePlanner, handlers.Orders.CloseOrder)
+	authAll.Patch("/orders/:id/discard", requirePlanner, handlers.Orders.DiscardOrder)
 	authAll.Delete("/orders/:id", requirePlanner, handlers.Orders.DeleteOrder)
 }
